<?xml version="1.0" encoding="utf-8" ?>
<resources>

    <string name="app_name">Polyjoule</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
	<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>News</item>
        <item>Course</item>
        <item>Médias</item>
        <item>Partenaires</item>
        <item>Infos</item>
        <item>Livres d\'or</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_race</item>
        <item>@drawable/ic_medias</item>
        <item>@drawable/ic_partner</item>
        <item>@drawable/ic_infos</item>
        <item>@drawable/ic_gold</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
	
    <string name="img_item">Test</string>
    <string name="email">Votre email</string>
    <string name="objet">Objet</string>
    <string name="message">Votre message</string>
    <string name="envoie">Envoyer</string>
    
    <!-- URLs -->
    <string name="photoURL">http://www.polyjoule.org/administration/ressources/data/Logos/</string>
    <string name="facebook">https://www.facebook.com/pages/Polyjoule/121213844627305?ref=ts</string>
    <string name="twitter">https://twitter.com/Polyjoule</string>
    
    <!-- Defaults strings -->
    <string name="defaultImage">ici l\'image</string>
    <string name="defaultTitre">Ici le titre</string>
    <string name="defaultDate">ici la date</string>
    <string name="defaultContenu">ici le contenu</string>
    <string name="contactemail">polyjoule@univ-nantes.fr</string>
</resources>
