<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ItemHeight"
    android:padding="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/news_list_image"
        android:layout_width="@dimen/ItemImageWidth"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/defaultImage"/>
   
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="0"
	        android:orientation="vertical" >
    
		    <TextView
		        android:id="@+id/news_list_title"
		        android:text="@string/defaultTitre"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
		        android:textStyle="bold"
		        android:textColor="@android:color/black" />
		
		    <TextView
		        android:id="@+id/news_list_date"
		        android:text="@string/defaultDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="@android:color/black" />
		
		    <TextView
		        android:id="@+id/news_list_content"
		        android:text="@string/defaultContenu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="13sp"
		        android:textColor="@android:color/black"  />
	    
	</LinearLayout>
</LinearLayout>