<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/newsheaderlayout"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/HeaderNewsListHeight"
	    android:layout_marginBottom="10dp"
	    android:background="@drawable/header_news_border"
	    android:orientation="vertical"
	    android:paddingBottom="8dp" >

	    <ImageView
	        android:id="@+id/news_header_image"
	        android:layout_width="wrap_content"
			android:layout_height="200dp"
	        android:contentDescription="@string/defaultImage"
	        android:src="@drawable/item_image" />

	    <TextView
	        android:id="@+id/news_header_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/defaultTitre"
	        android:textSize="25sp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/news_header_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/defaultDate"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/news_header_content"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/defaultContenu"
	        android:textSize="13sp" />
	</LinearLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:divider="@drawable/divider_listview"
        android:dividerHeight="3sp"
      />

</LinearLayout>