<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/contactfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/contacttwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:src="@drawable/ic_twitter" />

    </LinearLayout>
    
    <EditText
        android:id="@+id/contactobjet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/objet" />
    <EditText
        android:id="@+id/contactmessage"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/message" />
    <Button
        android:id="@+id/contactenvoie"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/envoie" />
</LinearLayout>